--- a/cvk/project/VisualStudio/cvk/cvk.vcxproj.filters
+++ b/cvk/project/VisualStudio/cvk/cvk.vcxproj.filters
@@ -13,15 +13,27 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\cvk-util">
+      <UniqueIdentifier>{4628c362-622e-4cdb-a424-ab8d34733077}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\cvk-util">
+      <UniqueIdentifier>{c7fd75ed-d5d3-4d70-88f5-c1231ff8f3ae}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\cvk\cvk.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\cvk\cvk-util\cvkConsole.h">
+      <Filter>Header Files\cvk-util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\cvk\cvk.c">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\cvk\cvk-util\cvkConsole.c">
+      <Filter>Source Files\cvk-util</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
