Setting up core interface for renderer. MOD: library project, filters and main header, adding files; main source, instantiating test interface. ADD: renderer main header and source with starter dummy functions.

--- a/cvk/project/VisualStudio/cvk/cvk.vcxproj
+++ b/cvk/project/VisualStudio/cvk/cvk.vcxproj
@@ -155,10 +155,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\include\cvk\cvk-render\cvkRenderer.h" />
     <ClInclude Include="..\..\..\include\cvk\cvk-util\cvkConsole.h" />
     <ClInclude Include="..\..\..\include\cvk\cvk.h" />
+    <ClInclude Include="..\..\..\include\cvk\cvk\cvk-types.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\source\cvk\cvk-render\cvkRenderer.c" />
     <ClCompile Include="..\..\..\source\cvk\cvk-util\cvkConsole.c" />
     <ClCompile Include="..\..\..\source\cvk\cvk.c" />
   </ItemGroup>
